Bug 688453 - gs8.53 renders certain fonts incorrectly
Summary: gs8.53 renders certain fonts incorrectly
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PS Interpreter (show other bugs)
Version: 8.53
Hardware: All All
: P3 normal
Assignee: leonardo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-14 06:58 UTC by Antonio
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer: 632
Word Size: ---


Attachments
Self-contained example reproducing the problem. (60.67 KB, application/postscript)
2005-12-14 07:02 UTC, Antonio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio 2005-12-14 06:58:36 UTC
gs 8.53 and 8.51 render certain characters from our font Gotham-Black slightly 
displaced from the correct position. See attached example font-spacing.ps (it 
has Gotham-black embedded). The file renders correctly under gs 8.00.

We believe this is a problem introduced with gs8.11, where a new font 
rendering engine was introduced. 

We don't discard that this may be a problem with the font itself, although we 
consider it unlikely, since the  Harlequin RIP renders the page in a very 
similar way as 8.00 does
Comment 1 Antonio 2005-12-14 07:02:12 UTC
Created attachment 1866 [details]
Self-contained example reproducing the problem. 


Strangely enough, if the file is converted to pdf, using gs8.53, then the
rendering of the resulting pdf is closer to what we expect (but I couldn't tell
that is completely correct)
Comment 2 Alex Cherepanov 2005-12-14 10:47:08 UTC
There is a significant difference between the sample file rendering
in v. 8.32 and 8.33 .
Comment 3 Antonio 2005-12-15 00:46:47 UTC
As Alex pointed out, the problem was apparently introduced with 8.33. I verified
myself and it looks related to the following patch
http://www.ghostscript.com/pipermail/gs-cvs/2004-ctober/004979.html
committed to fix bug 687614
Disabling the changes to gstype1.c in this patch fixes my case, but breaks a
test case in bug 687614 (the mirrored glyphs).

Comment 4 leonardo 2005-12-19 08:55:54 UTC
A correct URL is :
http://www.ghostscript.com/pipermail/gs-cvs/2004-October/004979.html
but it's a patch to GS_8_1X.
Do you surely mean it ?
Comment 5 Antonio 2005-12-19 09:19:30 UTC
I can't check right now, but I downloaded 8.32, 8.33 at home, compiled them 
and verified Alex assertion that they render the test case differently. I 
noticed that 8.33 did have the patch in the above URL applied to gstyope1.c 
and 8.32 did not. I then reverted the patch in 8.33 and 8.53 and verified that 
both versions rendered my test case correctly. 

does this answer your question, Leonardo?

Regards, Antonio
Comment 6 leonardo 2005-12-19 15:31:40 UTC
Almost yes, thank you.
Comment 7 leonardo 2006-01-16 18:55:16 UTC
The patch in Comment #4 isn't relevant :
1. Reverse applying it to the current HEAD (with a minor noize) doesn't improve 
the rendering.
2. The patch deals with Metrics, Metrics2, but they don't appear in the test 
case.

CPSI renders it fine, but Ghostscript misplaces idieresis.
Comment 8 leonardo 2006-01-16 18:59:20 UTC
Oops, the last comment is wrong : the reverse-applying the patch do improve the 
rendering. At first time I run a wrong revision.